--- a/grafos/templates/home.html
+++ b/grafos/templates/home.html
@@ -71,6 +71,9 @@
 
                       <div class="actions"> <button type="button" class="btn btn-info coloreo">Coloreo</button>
                         <button type="button" class="btn btn-info euler">Euler</button>
+
+                        <button type="button" class="btn btn-info hami">Hamilton</button>
+
 </div>
                     </div>
                   </div>
