--- a/grafos/templates/home.html
+++ b/grafos/templates/home.html
@@ -74,12 +74,21 @@
 
                         <button type="button" class="btn btn-info hami">Hamilton</button>
 
+  
 </div>
                     </div>
                   </div>
                 </div>
             </div>
          </form>
+
+
+          <form class="uploadForm" method="post" enctype="multipart/form-data">
+  <input type="file" id="uploadFile">
+  <input type="submit" class="button" id="uploadButton" value="Upload">
+</form>
+
+
     </div>
 </body>
 </html>
