--- a/grafos/templates/home.html
+++ b/grafos/templates/home.html
@@ -74,6 +74,8 @@
 
                         <button type="button" class="btn btn-info hami">Hamilton</button>
 
+                          <button type="button" class="btn btn-info" id="botonexportar" onclick="exportar();">Exportar</button>
+
   
 </div>
                     </div>
