Mas Canvas, Más diversión
Se Expande el Tamaño del canvas, permitiendo que el usuario tenga mas espacio para dibujar.

-Ahora cuadno una nueva arista o vertice es dibujado, el coloreo desaparece y pone los vertices en blanco (Estaria de Perlas que actualizara el coloreo).

-Ahora si un grafo queda desconectado, y se aplica el coloreo de grafo, este se colorea automaticamente con el color #0 en el array de colores.

-Ahora si no puede ejecutar el script de Euler, se considera que el grafo es "no euleriano" y se anexa a los resultados.

Nota: Se intento Repintar el Grafo si este llegara a ser "No euleriano" o "No Hamiltoniano",  Pero que Hueva de ver todas las condiciones otra vez.

--- a/files/css/grafo.css
+++ b/files/css/grafo.css
@@ -15,21 +15,16 @@
       z-index: 5;
     }
     .div_canvas {
-      position: absolute;
-      top: 0px;
-      left: 0px;
       border: 0px;
       width: 550px;
       height: 550px;
       z-index: 1;
     }
     .html_canvas {
-      position: absolute;
-      top: 0px;
-      left: 0px;
+
       border: 1px solid black;
-      width: 550px;
-      height: 550px;
+      width: 1280px;
+      height: 600px;
       background-color: transparent;
       z-index: 4;
     }
@@ -54,4 +49,10 @@
 .actions{
     right: 30px;
     position: absolute;
+}
+
+#textos{
+  position: absolute;
+  top: 830px;
+  left: auto;
 }
