--- a/grafos/templates/home.html
+++ b/grafos/templates/home.html
@@ -26,7 +26,7 @@
   </head>
   <body class="bg-light">
     <!--Nav bar-->
-    <nav class="navbar navbar-expand-md fixed-top navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-md fixed-top navbar-dark bg-dark" style="z-index:10;">
       <a class="navbar-brand" href="#">Grafos Matemáticas Discretas</a>
       <button class="navbar-toggler p-0 border-0" type="button" data-toggle="offcanvas">
         <span class="navbar-toggler-icon"></span>
