--- a/grafos/templates/home.html
+++ b/grafos/templates/home.html
@@ -27,7 +27,7 @@
   <body class="bg-light">
     <!--Nav bar-->
     <nav class="navbar navbar-expand-md fixed-top navbar-dark bg-dark" style="z-index:10;">
-      <a class="navbar-brand" href="#">Grafos Matemáticas Discretas</a>
+      <a class="navbar-brand" href="#">Diseño y Analisis de Algoritmos</a>
       <button class="navbar-toggler p-0 border-0" type="button" data-toggle="offcanvas">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -37,8 +37,6 @@
       </form>
       <div class="navbar-collapse offcanvas-collapse" id="navbarsExampleDefault">
         <div class="actions"> <button type="button" class="btn btn-raised btn-success coloreo">Coloreo</button>
-          <button type="button" class="btn btn-raised btn-success euler">Euler</button>
-          <button type="button" class="btn btn-raised btn-success hami">Hamilton</button>
           <button type="button" class="btn btn-raised btn-warning" id="botonexportar" onclick="exportar();">Exportar</button>
         </div>
       </div>
