--- a/grafos/templates/home.html
+++ b/grafos/templates/home.html
@@ -37,6 +37,7 @@
       </form>
       <div class="navbar-collapse offcanvas-collapse" id="navbarsExampleDefault">
         <div class="actions"> <button type="button" class="btn btn-raised btn-success coloreo">Coloreo</button>
+          <button type="button" class="btn btn-raised btn-success mis">MIS</button>
           <button type="button" class="btn btn-raised btn-warning" id="botonexportar" onclick="exportar();">Exportar</button>
         </div>
       </div>
